--- a/yes.html
+++ b/yes.html
@@ -14,7 +14,7 @@
     <div class="container">
         <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://i.giphy.com/Y9bboRSDSw0CezsCji.webp"
             alt="" width="280">
-        <h1>Hehehhehe, I knew it!</h1>
+        <h1>Happy rose day jaanu 🌹</h1>
 
         
     </div>
