--- a/no1.html
+++ b/no1.html
@@ -14,8 +14,8 @@
     <div class="container">
         <img class="media_gif__MBeQG" style="aspect-ratio:370/320" src="https://i.giphy.com/ixoMvaJ2NhFgouq9aY.webp"
             alt="" width="280">
-        <h1>Soch Lo Achy Sy!🙄</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1>Soch Lo Achy Se!🙄</h1>
+        <p>Bhaut na bolna aa rha hai?.</p>
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="no2.html">No</a>
