--- a/no3.html
+++ b/no3.html
@@ -14,8 +14,8 @@
     <div class="container">
         <img class="media_gif__MBeQG" style="aspect-ratio:286/270" src="https://i.giphy.com/v4UdKrxhIiB1QFmO6b.webp"
             alt="" width="280">
-        <h1>Manja na! Kitna bao Kahegi😭</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1>Ab jab tak yes nhi dabaoge aage nhi jaaunga😭</h1>
+        <p>Haan kardooooo.</p>
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="#" id="move-random">No</a>
