--- a/yes.html
+++ b/yes.html
@@ -15,6 +15,9 @@
         <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://i.giphy.com/Y9bboRSDSw0CezsCji.webp"
             alt="" width="280">
         <h1>Happy rose day jaanu 🌹</h1>
+        <div class="btn">
+            <a href="index.html">Dobara</a>
+        </div>
 
         
     </div>
