--- a/no1.html
+++ b/no1.html
@@ -14,7 +14,7 @@
     <div class="container">
         <img class="media_gif__MBeQG" style="aspect-ratio:370/320" src="https://i.giphy.com/ixoMvaJ2NhFgouq9aY.webp"
             alt="" width="280">
-        <h1>Soch Lo Achy Se!🙄</h1>
+        <h1>Soch Lo Ache Se!🙄</h1>
         <p>Bhaut na bolna aa rha hai?.</p>
         <div class="btn">
             <a href="yes.html">Yes</a>
