--- a/yes.html
+++ b/yes.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://i.giphy.com/Y9bboRSDSw0CezsCji.webp"
+        <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://tenor.com/view/muddu-gif-24455155"
             alt="" width="280">
         <h1>Happy rose day jaanu 🌹</h1>
         <div class="btn">
