--- a/no2.html
+++ b/no2.html
@@ -14,7 +14,7 @@
     <div class="container">
         <img
             src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGF0aHk0MWIyMXAwb2t2bTIwZXRtaGh3ZXViOTJobXVvMGRhM3Y1ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/hlw5USrmXeAHlTAOds/giphy.gif">
-        <h1>Ek Bar Aur Soch Lo Achy Se!😫</h1>
+        <h1>Ek Bar Aur Soch Lo Ache Se!😫</h1>
         <p>Please haan bolo naaaaa.</p>
         <div class="btn">
             <a href="yes.html">Yes</a>
