--- a/yes.html
+++ b/yes.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="container">
-        <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://tenor.com/view/muddu-gif-24455155"
-            alt="" width="280">
+<!--         <img class="media_gif__MBeQG" style="aspect-ratio:307/270" src="https://i.giphy.com/Y9bboRSDSw0CezsCji.webp" -->
+<!--             alt="" width="280"> -->
+        <div class="tenor-gif-embed" data-postid="24455155" data-share-method="host" data-aspect-ratio="0.66875" data-width="100%"><a href="https://tenor.com/view/muddu-gif-24455155">Muddu GIF</a>from <a href="https://tenor.com/search/muddu-gifs">Muddu GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>Happy rose day jaanu 🌹</h1>
         <div class="btn">
             <a href="index.html">Dobara</a>
